--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==22.0
+python-telegram-bot[job-queue]==22.0 # Combines both previous lines
 python-dotenv==1.1.0
 pandas==2.2.3
 numpy==2.2.4
